--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src='public/browser/pathfindingVisualizer.jsx'></script>
+  <script src='src/index.js'></script>
 </html>
