--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
-    <div id="root"></div>
+    <div>
+      <Navbar/>
+      <PathfindingVisualizer></PathfindingVisualizer>
+    </div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src='src/index.js'></script>
+  <script src='src/App.js'></script>
 </html>
