--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src='src/App.js'></script>
+  <script src='src/App.js' type="module"></script>
 </html>
